--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@
     box-sizing: border-box;
 }
 
+#mockup {
+    width: ..px;
+    height: ..px;
+    background-image: url();
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    opacity: 0.5;
+    z-index: 10;
+    pointer-events: none;
+  }
+  
 .container{
 
 }
@@ -45,5 +59,5 @@ h3{
 }
 
 .icon{
-    
+
 }
