--- a/style.css
+++ b/style.css
@@ -31,11 +31,13 @@
 }
 
 .content-right{
-    
+    padding: 20px 10px 0px 19px;
 }
 
 h1{
     font-size: 20px;
+    line-height: 25px;
+    letter-spacing: px;
 }
 
 h3{
