--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 h1{
     font-size: 20px;
     line-height: 25px;
-    letter-spacing: px;
+    letter-spacing: -0.5px;
 }
 
 h3{
@@ -48,14 +48,21 @@ h3{
 
 .right-bottom{
     display: flex;
+    /* justify-content: space-around; */
+    padding: 0px 0 5px 3px;
+    margin-top: 58px;
 }
 
 .user-image{
-
+    
+    
 }
 
 .user-info{
     font-size: 13px;
+    padding: 7px 0px 0 12px;
+    
+    line-height: 18px;
 
 }
 
@@ -63,9 +70,9 @@ h3{
 }
 
 .user-date{
-
+    
 }
 
 .icon{
-
+padding: 12px 0 0 54px;
 }
