comment out background image mockup

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 #mockup {
     width: 496px;
     height: 265px;
-    background-image: url(./images/third-interface.png);
+    /* background-image: url(./images/third-interface.png); */
     
     position: absolute;
     top: 0;
