--- a/style2.css
+++ b/style2.css
@@ -7,7 +7,7 @@
 #mockup {
     width: 1229px;
     height: 442px;
-    background-image: url(./images/complex.10.png);
+    /* background-image: url(./images/complex.10.png); */
     
     position: absolute;
     top: 0;
@@ -25,15 +25,17 @@
     display: flex;
     padding: 17px 5px 0 0px;
     justify-content: space-around;
+    background-color: #E3E3E3;
     
 
 }
 
 .card{
-    border: 1px solid grey;
+    /* border: 1px solid grey; */
     border-radius: 20px;
     width: 289px;
     height: 412px;
+    background: white;
 }
 
 .job{
@@ -42,6 +44,10 @@ font-family: 'Roboto', sans-serif;
 font-size: 10px;
 font-weight: 700;
 padding: 5px 0 3px 3px;
+}
+
+.line{
+  border: 1px solid #E8E8E8;
 }
 
 
