--- a/style2.css
+++ b/style2.css
@@ -52,9 +52,7 @@ padding: 5px 0 3px 3px;
 
 
 .image{
-margin-left: 73px;
-margin-top: 25px;
-margin-bottom: 10px;
+margin: 25px 70px 10px 74px
 }
 
 .body{
@@ -77,6 +75,7 @@ font-family: 'Roboto', sans-serif;
 font-size: 14px;
 line-height: 20px;
 align-items: center;
+color: #737373;
 }
 
 .social-media{
